# innomightlabs-api

./: .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/chatbot/: __init__.py  chat_agent_workflow.py  chatbot_controller.py  chatbot_models.py  chatbot_services.py
app/chatbot/components/: conversation_manager.py
app/chatbot/conversation/: __init__.py  conversation_models.py  (+2 more)
app/common/: __init__.py  config.py  controller.py  db_connect.py  entities.py  exceptions.py  middlewares.py  models.py  repositories.py  utils.py  vector_embedders.py  workflows.py
app/conversation/: __init__.py  controller.py  conversation_controller.py  conversation_entities.py  conversation_models.py  conversation_repositories.py  conversation_services.py  repositories.py  services.py
app/mcp_servers/: __init__.py  mcp_text_editor.py
app/user/: __init__.py  controller.py  entities.py  index.py  models.py  services.py  user_controller.py  user_entities.py  user_repository.py  user_services.py
app/workflows/: chat_agent_workflow.py  chatbot.py  chatbot_controller.py  models.py
components/: chatbot.py
controllers/: chatbot_controller.py
docs/httpd/: MessageController.http  send_message.http
docs/scripts/: generate_models.py  git_snapshot.py  sandbox.ipynb
docs/sql/: scratchpad.sql
infra/: README.md  api_gateway.tf  aurora.tf  bastion.tf  ecr.tf  iam.tf  iam_db_auth.tf  lambda.tf  lambdas.tf  main.tf  outputs.tf  secrets.tf  variables.tf  vpc.tf
infra/lambdas/: innomightlabs_api_lambda.tf  outputs.tf  simple_lambda.tf  variables.tf
migrations/: env.py
migrations/raw_sql/: 002_create_initial_table_conversation_module.sql  003_create_memory_storage.sql
migrations/versions/: 001_create_pgvector_extension.py  002_create_initial_table_conversation_module.py  003_create_memory_storage.py
models/: agentic_workflow_models.py  requests.py  responses.py
tests/: conftest.py
tests/conversation/: test_conversation_controller.py
workflows/: chat_agent_workflow.py
(+46 files in other folders)
