[project]
name = "innomightlabs-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "behave[develop,toml]>=1.2.6",
    "fastapi[standard]>=0.115.12",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.7",
    "pgvector>=0.4.1",
    "psycopg2>=2.9.10",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy~=2.0",
    "uvicorn>=0.34.2",
]

[tool.setuptools.packages.find]
where = ["."]              
include = ["app*"]

[tool.ruff]
line-length = 220

[tool.ruff.lint]
extend-select = ["E", "F"]

[tool.pytest.ini_options]
markers = [
    "asyncio: mark test as asyncio to run it with an event loop"
]
