[project]
name = "innomightlabs-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "alembic>=1.16.1",
    "anthropic>=0.54.0",
    "beautifulsoup4>=4.13.4",
    "boto3>=1.35.0",
    "fastapi[standard]>=0.115.12",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.15",
    "langchain-aws>=0.2.26",
    "langchain-community>=0.3.26",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.7",
    "loguru>=0.7.3",
    "mangum>=0.19.0",
    "pdfminer-six>=20250506",
    "pgvector>=0.4.1",
    "playwright>=1.54.0",
    "psycopg2>=2.9.10",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy~=2.0",
    "strands-agents-tools[local-chromium-browser]>=0.2.0",
    "uvicorn>=0.34.2",
    "wikipedia>=1.4.0",
]

[tool.setuptools.packages.find]
where = ["."]              
include = ["app*"]

[tool.ruff]
line-length = 180

[tool.ruff.lint]
extend-select = ["E", "F"]

[tool.pytest.ini_options]
markers = [
    "asyncio: mark test as asyncio to run it with an event loop"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
